# switchander

./: .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  Switchander.filtergraph  test.sh
Include/: CrossFader.h  MidiDebouncer.h  PluginEditor.h  PluginProcessor.h
Source/: CrossFader.cpp  CrossFader.h  LongPressButton.cpp  LongPressButton.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
include/: Logo.h  PluginEditor.h  PluginProcessor.h
source/: CrossFader.cpp  Logo.cpp  LongPressButton.cpp  MidiDebouncer.cpp  PluginEditor.cpp  PluginProcessor.cpp
